--- a/main.tex
+++ b/main.tex
@@ -135,6 +135,8 @@ bottom=2cm,%
 
     \tableofcontents
     \newpage
+    \subfile{Disclaimer}
+    \newpage
     \subfile{1.Introduction}
     \newpage
     \subfile{2.ThreadCommunication}
