Delete unnecessary files, add github link to first page

--- a/main.tex
+++ b/main.tex
@@ -115,9 +115,9 @@ bottom=2cm,%
 		\\ \bigskip
 		\Large Last Updated: April, 2023
 		\\ \bigskip
-		% \large Author: Sascha Kehrli
-		% \\ \bigskip
-		% \Large pprog-pvw-skript@vis.ethz.ch
+		\large Author: Sascha Kehrli
+		\\ \bigskip
+		\Large github.com/skehrli/ParallelProgrammingScript
 		\vfill
 		{\includegraphics[width = 0.3\textwidth]{images/ETH.png}}
 		\vfill
